--- a/package.json
+++ b/package.json
@@ -154,7 +154,8 @@
     "vue-eslint-parser": "^7.1.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "yup": "^1.4.0"
   },
   "repository": {
     "type": "git",
